# BentoMoshi

./: .bentoignore  .gitignore  README.md  bentofile.yaml  client.py  pyproject.toml  requirements.txt  service.py
bentomoshi/: client.py  service.py
