[project]
name = "BentoMoshi"
version = "0.1.0"
description = "BentoMoshi: Running Moshi with BentoML"
requires-python = ">=3.12"
dependencies = [
  "bentoml==1.3.8",
  "fastapi==0.114.1",
  "huggingface-hub[hf-transfer]>=0.24.7",
  "moshi==0.1.0",
  "sentencepiece==0.2.0",
  "sphn==0.1.4",
  "torch>=2.4.1",
]

[tool.uv]
dev-dependencies = ["ipython>=8.18.0", "mypy>=1.12.0", "ruff>=0.6.9"]
